@@ -238,15 +238,9 @@ class HtmlReporter(Reporter):
         }))
 
         if sys.version_info < (3, 0):
-            try:
-                html = html.decode(encoding)
-            except UnicodeDecodeError as e:
-                sample = e.object[max([0, e.start-30]):e.start+30]
-                raise CoverageException(
-                    "Couldn't decode %r as %s: %r" % (
-                        cu.filename, e.encoding, sample
-                    )
-                )
+            # In theory, all the characters in the source can be decoded, but
+            # strange things happen, so use 'replace' to keep errors at bay.
+            html = html.decode(encoding, 'replace')
 
         html_filename = flat_rootname + ".html"
         html_path = os.path.join(self.directory, html_filename)
